[gd_scene load_steps=7 format=3 uid="uid://cdf2407wdosc0"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_0tg83"]
[ext_resource type="Texture2D" uid="uid://dnl2qjuje8qya" path="res://Assets/friendly firefly.png" id="2_6ik55"]
[ext_resource type="AudioStream" uid="uid://dgfu75uaxhyik" path="res://Sounds/Player_Shoot.wav" id="3_ue12k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6x5u"]
size = Vector2(64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmldg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6ik55")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6r20e"]
size = Vector2(66, 66)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0tg83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r6x5u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_tmldg")
animation = &"new_animation"

[node name="Area2D" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6r20e")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PlayerShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ue12k")

[connection signal="shoot" from="." to="." method="_on_player_shoot"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
